Cambiando el titulo de ltemplate

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{message}}</h1>
+      <h1>{{titulo}}</h1>
     </div>
     
     <script type="module" src="/main.js"></script>
