--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{titulo}}</h1>
+      <h1>{{titulo.toUpperCase()}}</h1>
+      <figure>
+        <img v-bind="attrsImages">
+      </figure>
     </div>
-    
     <script type="module" src="/main.js"></script>
   </body>
 </html>
