--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">
-      <h1>{{titulo.toUpperCase()}}</h1>
-      <figure>
-        <img v-bind="attrsImages">
-      </figure>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
